--- a/.github/workflows/sync-changes-to-repos.yml
+++ b/.github/workflows/sync-changes-to-repos.yml
@@ -1,4 +1,4 @@
-name: Sync _locales/ between <chromium|firefox>/extension/, then ** to adamlui/ai-apps/chatgpt-auto-continue/, then greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
+name: Sync _locales/ between <chromium|firefox>/extension/, then ** to adamlui/ai-web-extensions/chatgpt-auto-continue/, then greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
 
 on:
   push:
@@ -25,12 +25,12 @@ jobs:
           path: adamlui/chatgpt-auto-continue
           fetch-depth: 2
 
-      - name: Checkout adamlui/ai-apps
+      - name: Checkout adamlui/ai-web-extensions
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.REPO_SYNC_PAT }}
-          repository: adamlui/ai-apps
-          path: adamlui/ai-apps
+          repository: adamlui/ai-web-extensions
+          path: adamlui/ai-web-extensions
 
       - name: Checkout adamlui/userscripts
         uses: actions/checkout@v4
@@ -68,11 +68,11 @@ jobs:
           # Expose sync src for commit msg in self-push step
           echo "SYNC_SRC=$sync_src" >> $GITHUB_ENV
 
-      - name: Sync ** to adamlui/ai-apps/chatgpt-auto-continue/
+      - name: Sync ** to adamlui/ai-web-extensions/chatgpt-auto-continue/
         run: |
           rsync -avhr --delete --exclude '.*' \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
-            ${{ github.workspace }}/adamlui/ai-apps/chatgpt-auto-continue/
+            ${{ github.workspace }}/adamlui/ai-web-extensions/chatgpt-auto-continue/
 
       - name: Sync greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
         run: |
@@ -103,9 +103,9 @@ jobs:
           git add . && git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from ${{ env.SYNC_SRC }}/]" || true
           git push
 
-      - name: Push changes to adamlui/ai-apps
+      - name: Push changes to adamlui/ai-web-extensions
         run: |
-          cd ${{ github.workspace }}/adamlui/ai-apps
+          cd ${{ github.workspace }}/adamlui/ai-web-extensions
           git add .
           git commit -n -m "$ESCAPED_MSG ↞ [auto-sync from https://github.com/adamlui/chatgpt-auto-continue]" || true
           git push
