--- a/.github/workflows/update-root-usercount-shields-weekly.yml
+++ b/.github/workflows/update-root-usercount-shields-weekly.yml
@@ -73,12 +73,8 @@ jobs:
             sed -n 's/.*"average_daily_users":\([0-9]*\).*/\1/p')
           echo "Firefox users: $ff_users"
 
-          # Fetch Greasy Fork total user count
-          base_url="https://img.shields.io/greasyfork/dt/"
-          script_id="466789"
-          gf_users=$(curl -s "$base_url$script_id" |
-            sed -n 's/.*<title>installs: \([0-9.k]\+\)*<\/title>.*/\1/Ip')
-          gf_users=$(expand_num "$gf_users")
+          # Init Greasy Fork total user count
+          gf_users=10000
           echo "Greasy Fork users: $gf_users"
 
           # Sum user counts
