--- a/.github/workflows/update-usercount-shields-weekly.yml
+++ b/.github/workflows/update-usercount-shields-weekly.yml
@@ -112,15 +112,18 @@ jobs:
           rsync -avhr --delete --exclude={'.*','eslint*','package*.json'} \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/ai-web-extensions/chatgpt-auto-continue/
-      
+
       - name: Config committer
         if: env.USERS_UPDATED == 'true'
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          GPG_PRIVATE_ID: ${{ secrets.GPG_PRIVATE_ID }}
         run: |
-          gpg --batch --import <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+          gpg --batch --import <(echo "$GPG_PRIVATE_KEY")
           git config --global commit.gpgsign true
           git config --global user.name "kudo-sync-bot"
           git config --global user.email "auto-sync@kudoai.com"
-          git config --global user.signingkey  "${{ secrets.GPG_PRIVATE_ID }}"
+          git config --global user.signingkey "$GPG_PRIVATE_ID"
 
       - name: Push changes to adamlui/chatgpt-auto-continue
         if: env.USERS_UPDATED == 'true'
