--- a/.github/workflows/sync-changes-to-repos.yml
+++ b/.github/workflows/sync-changes-to-repos.yml
@@ -68,13 +68,13 @@ jobs:
 
       - name: Sync ** to adamlui/ai-web-extensions/chatgpt-auto-continue/
         run: |
-          rsync -avhr --delete --exclude '.*' \
+          rsync -avhc --delete --exclude '.*' \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/ \
             ${{ github.workspace }}/adamlui/ai-web-extensions/chatgpt-auto-continue/
 
       - name: Sync greasemonkey/ to adamlui/userscripts/chatgpt/chatgpt-auto-continue/
         run: |
-          rsync -avhr --delete \
+          rsync -avhc --delete \
             ${{ github.workspace }}/adamlui/chatgpt-auto-continue/greasemonkey/ \
             ${{ github.workspace }}/adamlui/userscripts/chatgpt/chatgpt-auto-continue/
 
